# LLVMPlayground

./: .gitignore  README.md
part1_learningir/: Makefile
part1_learningir/c_programs/: test1.c  test2.ll  test3.c  test3.ll  test4.c
part1_learningir/ir_programs/: test1.ll  test2.ll  test3.ll  test4.ll
part1_learningir/submission/c_programs/: test1.ll  test2.c  test4.ll
part2_basic_data_flow_analysis/: CMakeLists.txt  run.sh
part2_basic_data_flow_analysis/DivZero/: CMakeLists.txt
part2_basic_data_flow_analysis/DivZero/include/: DataflowAnalysis.h  DivZeroAnalysis.h
part2_basic_data_flow_analysis/DivZero/src/: DataflowAnalysis.cpp  DivZeroAnalysis.cpp  Domain.cpp
part2_basic_data_flow_analysis/DivZero/test/: branch0.ll  branch0.opt.ll  branch1.ll  branch1.opt.ll  branch2.ll  branch2.opt.ll  branch3.ll  branch3.opt.ll  branch4.ll  branch4.opt.ll  branch5.ll  branch5.opt.ll  branch6.ll  branch6.opt.ll  input0.ll  input0.opt.ll  loop0.ll  loop0.opt.ll  loop1.ll  loop1.opt.ll  simple0.ll  simple0.opt.ll  simple1.ll  simple1.opt.ll
part3_pointer_aware_data_flow_analysis/: CMakeLists.txt  run.sh
part3_pointer_aware_data_flow_analysis/DivZero/: CMakeLists.txt
part3_pointer_aware_data_flow_analysis/DivZero/include/: DivZeroAnalysis.h
part3_pointer_aware_data_flow_analysis/DivZero/src/: DivZeroAnalysis.cpp  Domain.cpp
part4_instrumentation/: CMakeLists.txt  run.sh
part4_instrumentation/DivZeroInstrument/: CMakeLists.txt
part4_instrumentation/DivZeroInstrument/test/: calc.cov  calc.instrumented.ll  calc.ll  simple0  simple0.cov  simple0.instrumented.ll  simple0.ll  simple1  simple1.cov  simple1.instrumented.ll  simple1.ll  simple2  simple2.cov  simple2.instrumented.ll  simple2.ll  simple3  simple3.cov  simple3.instrumented.ll  simple3.ll  simple4  simple4.cov  simple4.instrumented.ll  simple4.ll  simple5  simple5.cov  simple5.instrumented.ll  simple5.ll  simple6  simple6.cov  simple6.instrumented.ll  simple6.ll  simple7  simple7.cov  simple7.instrumented.ll  simple7.ll  simple8  simple8.cov  simple8.instrumented.ll  simple8.ll  simple9  (+3 more)
sharm611_assignment1/part2/include/: DataflowAnalysis.h
sharm611_assignment1/part2/src/: DataflowAnalysis.cpp
sharm611_assignment1/part3/include/: DataflowAnalysis.h  Domain.h
sharm611_assignment1/part3/src/: DataflowAnalysis.cpp  DivZeroAnalysis.cpp
sharm611_assignment1/part4/: Instrument.cpp
